# cookiecutter-python-package

./: .pre-commit-config.yaml  .ruffignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  TEMPLATE_SUMMARY.md  TOOLS_GUIDE.md  cookiecutter.json  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt
.github/: dependabot.yml
.github/workflows/: docs.yml  test.yml
docs/: index.md
docs/configuration/: best-practices.md  template-options.md  tool-selection.md
docs/development/: build-backend-testing.md  contributing.md  releases.md  setup.md  testing.md
docs/getting-started/: examples.md  installation.md  quick-start.md
docs/reference/: faq.md  project-structure.md  standards.md  template-summary.md  troubleshooting.md
docs/tools/: build-backends.md  cicd.md  documentation.md  linting.md  overview.md  packaging.md  security.md  testing.md
hooks/: post_gen_project.py
tests/: conftest.py  test_build_backends.py  test_documentation.py  test_hooks.py  test_performance.py  test_security.py  test_template.py  test_validation.py
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  .testignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  mkdocs.yml  noxfile.py  pyproject.toml  tox.ini
{{cookiecutter.project_slug}}/.github/: dependabot.yml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml  release.yml
{{cookiecutter.project_slug}}/docs/: index.md
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug.replace('-', '_')}}/: __init__.py  cli.py  core.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: core.py
{{cookiecutter.project_slug}}/tests/: test_cli.py  test_core.py  test_{{cookiecutter.project_slug}}.py
